Correction in alignment of breadcrumb home icon with rest of the page

--- a/src/components/BreadCrumb/index.scss
+++ b/src/components/BreadCrumb/index.scss
@@ -22,9 +22,7 @@
     font-size: 18px;
     margin: 0;
     padding: 0;
-    position: absolute;
-    top: -1px;
-    left: -20px;
     color: #3b4557 !important;
+    transform: translateY(-2px);
   }
 }
